@startuml
hide circle
skinparam linetype ortho

entity "user" as user {
  *id : BIGINT <<PK>>
  --
  username : VARCHAR <<UNIQUE>>
  email : VARCHAR <<UNIQUE>>
  password_hash : VARCHAR
  enabled : BOOLEAN
  created_at : DATETIME
  updated_at : DATETIME
}

entity "personal_info" as personal_info {
  *id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  first_name : VARCHAR
  last_name : VARCHAR
  phone : VARCHAR
  address : VARCHAR
  city : VARCHAR
  country : VARCHAR
  linkedin_url : VARCHAR
  github_url : VARCHAR
  portfolio_url : VARCHAR
  summary : TEXT
  created_at : DATETIME
  updated_at : DATETIME
}

entity "verification_code" as verification_code {
  *id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  code : VARCHAR
  type : VARCHAR
  expires_at : DATETIME
  used : BOOLEAN
  created_at : DATETIME
}

entity "feedback" as feedback {
  *id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  content : TEXT
  rating : INT
  created_at : DATETIME
}

entity "chat" as chat {
  *id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  title : VARCHAR
  created_at : DATETIME
  updated_at : DATETIME
}

entity "message" as message {
  *id : BIGINT <<PK>>
  --
  chat_id : BIGINT <<FK>>
  sender_type : VARCHAR
  content : TEXT
  created_at : DATETIME
}

entity "cv" as cv {
  *id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  personal_info_id : BIGINT <<FK>>
  title : VARCHAR
  template_name : VARCHAR
  created_at : DATETIME
  updated_at : DATETIME
}

entity "university" as university {
  *id : BIGINT <<PK>>
  --
  name : VARCHAR
  country : VARCHAR
  city : VARCHAR
}

entity "position" as position {
  *id : BIGINT <<PK>>
  --
  name : VARCHAR
}

entity "skill" as skill {
  *id : BIGINT <<PK>>
  --
  name : VARCHAR
  category : VARCHAR
}

entity "language" as language {
  *id : BIGINT <<PK>>
  --
  name : VARCHAR
  code : VARCHAR
}

entity "education" as education {
  *id : BIGINT <<PK>>
  --
  personal_info_id : BIGINT <<FK>>
  university_id : BIGINT <<FK>>
  degree : VARCHAR
  field_of_study : VARCHAR
  start_date : DATE
  end_date : DATE
  grade : VARCHAR
  description : TEXT
}

entity "experience" as experience {
  *id : BIGINT <<PK>>
  --
  personal_info_id : BIGINT <<FK>>
  position_id : BIGINT <<FK>>
  company_name : VARCHAR
  location : VARCHAR
  start_date : DATE
  end_date : DATE
  currently_working : BOOLEAN
  description : TEXT
}

entity "project" as project {
  *id : BIGINT <<PK>>
  --
  personal_info_id : BIGINT <<FK>>
  name : VARCHAR
  description : TEXT
  repository_url : VARCHAR
  live_url : VARCHAR
  start_date : DATE
  end_date : DATE
}

entity "certificate" as certificate {
  *id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  personal_info_id : BIGINT <<FK>>
  name : VARCHAR
  issuer : VARCHAR
  issue_date : DATE
  expiration_date : DATE
  credential_id : VARCHAR
  credential_url : VARCHAR
}

entity "personal_info_skill" as personal_info_skill {
  *personal_info_id : BIGINT <<FK>>
  *skill_id : BIGINT <<FK>>
  --
  level : VARCHAR
}

entity "personal_info_language" as personal_info_language {
  *personal_info_id : BIGINT <<FK>>
  *language_id : BIGINT <<FK>>
  --
  proficiency_level : VARCHAR
}

entity "project_skill" as project_skill {
  *project_id : BIGINT <<FK>>
  *skill_id : BIGINT <<FK>>
}

user ||--o| personal_info : has
user ||--o{ verification_code : owns
user ||--o{ feedback : gives
user ||--o{ chat : owns
chat ||--o{ message : contains

user ||--o{ cv : owns
personal_info ||--o{ cv : used_by

personal_info ||--o{ education : has
university ||--o{ education : belongs_to

personal_info ||--o{ experience : has
position ||--o{ experience : used_in

personal_info ||--o{ project : has
project ||--o{ project_skill : uses
skill ||--o{ project_skill : included_in

personal_info ||--o{ personal_info_skill : has
skill ||--o{ personal_info_skill : selected_in

personal_info ||--o{ personal_info_language : knows
language ||--o{ personal_info_language : selected_in

user ||--o{ certificate : owns
personal_info ||--o{ certificate : lists

@enduml